--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -244,6 +244,7 @@ will have on the flow in the tunnel. The test was done using ANSYS.
 	\textbf{Parameter} & \textbf{Value/Type}\\
 	\hline
 	Type of test & Fluid flow\\
+	\hline
 	Type of fluid & air\\
 	\hline
 	Velocity & 10 - 50 m/s\\
