--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -20,60 +20,22 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 		\label{fig1}
 	\end{figure}
 \end{center}
-\subsubsection{Stability}
-The base of the Stewart platform has a bigger diameter (300mm) than that of the moving platform (200mm) hence the center of gravity will always fall within the base during operation. The Stewart platform is therefore stable.
-\subsubsection{Mechanical Feasibility}
-Based on the base and platform diameters, distance between the base and platform (i.e. height), an angle of attack of 0.25, and side slip angle of 0.16667, the quality index ($\lambda$) of the Stewart platform was found to be 0.86. This presents a design with few singularities. It is therefore mechanically feasible.
-\subsubsection{Weight}
-3D models of the Stewart platform were modelled on Autodesk Inventor using the three materials described earlier. Use of aluminum was verified to offer the most light-weight design.
-\begin{table}[H]
-	\caption{Weight Comparisons}
-\end{table}
-\begin{center}
-	\begin{tabular}{|l|l|}
-		\hline
-		\textbf{Material} & \textbf{Mass(Kg)} \\
-		\hline
-		Aluminium         & 2.8               \\
-		\hline
-		Mild Steel        & 4.6               \\
-		\hline
-		Stainless steel   & 5.0               \\
-		\hline
-	\end{tabular}
-\end{center}
-\subsubsection{Finite Element Analysis on Stewart Platform}
-Finite Element Analysis was done on FEA environment in Autodesk inventor. A static analysis test was performed and the following results were obtained:
-\begin{table}[H]
-	\caption{FEA Results}
-\end{table}
-\begin{center}
-	\begin{tabular}{|l|l|l|}
-		\hline
-		\textbf{Name}     & \textbf{Minimum} & \textbf{Maximum} \\
-		\hline
-		Von Mise's        & 0 MPa            & 63.19 MPa        \\
-		\hline
-		Displacement      & 0 mm             & 23.74 mm         \\
-		\hline
-		Safety Factor     & 10.3426 ul       & 15 ul            \\
-		\hline
-		Equivalent Strain & 0 ul             & 0.052 ul         \\
-		\hline
-	\end{tabular}
-\end{center}
-Von Mise's stress does not exceed the Yield Stress of Aluminum (275 MPa) hence the platform will not yield under this applied load.
 
-Application of loads on the platform translates to induced strain in the Stewart platform legs. Such strains are shown in figure \ref{eq}.
+\subsubsection{Finite Element Analysis on Stewart Platform}
+Finite Element Analysis done on FEA environment in Autodesk inventor showed expected strain values on each
+Stewart platform leg as shown in figure \ref{strain}.
+
 \begin{center}
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.6\linewidth]{Figures/Equivalent}
 		\caption[Equivalent strain]{Strain induced on each of the legs}
-		\label{eq}
+		\label{strain}
 	\end{figure}
 \end{center}
-These strains are small thus they will need amplification in order provide substantial input for the strain gauges used for force measurements.
+These strains are small thus they need amplification in order provide
+ substantial input to be used for force measurements. Strain values detected on the legs and amplified by the
+ HX711s were obtained and displayed on the HMI as shown in 
 \subsubsection{Stewart Platform Simulation}
 Stewart Platform simulation was done on MatLab using the Inverse kinematic equations. Different servo angles for different platform movements can be obtained from the simulation. The angles for yaw, pitch and roll could be adjusted during simulations to predict the maximum allowable angle values. Value of displacement in the x-, y- and z-directions could also be adjusted enabling us to predict the maximum allowable displacement in the respective directions. A summary of these angles is given in table \ref{roll}.
 \begin{center}
