--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -284,7 +284,9 @@ in figure \ref{pipe and rake}
 	\label{pipe and rake}
 	\end{figure}
 \end{center}
-
+For the complete assembly, a 20mm diameter hole will be drilled on the floor of the wind tunnel at the intake section
+and the pipe will be held fast to the floor by two plumbing nuts on both sides of a 1.5mm plate. The plate will be fastened to 
+the floor by use of M6 bolts and nuts.
 \subsection{Instrumentation}
 \subsubsection{Design of the Force Sensor}
 The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
