--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -21,7 +21,7 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 	\end{figure}
 \end{center}
 
-\subsubsection{Finite Element Analysis on Stewart Platform}
+\subsection{Force Measurement by the Stewart Platform}
 Finite Element Analysis done on FEA environment in Autodesk inventor showed expected strain values on each
 Stewart platform leg as shown in figure \ref{strain}.
 
@@ -35,59 +35,7 @@ Stewart platform leg as shown in figure \ref{strain}.
 \end{center}
 These strains are small thus they need amplification in order provide
  substantial input to be used for force measurements. Strain values detected on the legs and amplified by the
- HX711s were obtained and displayed on the HMI as shown in 
-\subsubsection{Stewart Platform Simulation}
-Stewart Platform simulation was done on MatLab using the Inverse kinematic equations. Different servo angles for different platform movements can be obtained from the simulation. The angles for yaw, pitch and roll could be adjusted during simulations to predict the maximum allowable angle values. Value of displacement in the x-, y- and z-directions could also be adjusted enabling us to predict the maximum allowable displacement in the respective directions. A summary of these angles is given in table \ref{roll}.
-\begin{center}
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.75\linewidth]{Figures/Matlab}
-		\caption[Linear displacements]{Matlab simulation for x-y-z movements}
-	\end{figure}
-\end{center}
-\begin{center}
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.75\linewidth]{Figures/Matlab2}
-		\caption[Angular displacements]{Matlab simulation for yaw,pitch and roll movements}
-	\end{figure}
-\end{center}
-\begin{center}
-	\begin{table}[H]
-		\centering
-		\caption[Maximum Servo angles]{Maximum Servo angles for maximum yaw,pitch, roll angles and maximum x,y and z displacements}
-		\label{roll}
-		\centering
-		\begin{tabular}{|l|l|}
-			\hline
-			\textbf{Max. roll angle (deg)}   & \textbf{Max. servo angle}      \\
-			\hline
-			$|15|$                           & 24.34                          \\
-			\hline
-			\textbf{Max. yaw angle (deg)}    & \textbf{Max. servo angle(deg)} \\
-			\hline
-			$|15|$                           & 27.13                          \\
-			\hline
-			\textbf{Max. pitch angle (deg)}  & \textbf{Max. servo angle(deg)} \\
-			\hline
-			$|15|$                           & 25.79                          \\
-			\hline
-			\textbf{Max. x displacement(cm)} & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 71.58                          \\
-			\hline
-			\textbf{Max. y displacement}     & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 63.78                          \\
-			\hline
-			\textbf{Max. z displacement(cm)} & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 29.03                          \\
-			\hline
-		\end{tabular}
-	\end{table}
-\end{center}
-
+ HX711s were obtained and displayed on the HMI as force measurements when load is applied on the platform.
 \subsection{Human Machine Interface}
 The user interface of the platform was programmed using golang and this resulted in the view below with the use of sliders for platform positioning and buttons to set model orientations and start data collection.
 \begin{center}
