--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -73,58 +73,7 @@ Application of loads on the platform translates to induced strain in the Stewart
 		\label{eq}
 	\end{figure}
 \end{center}
-These strains are small thus they will need amplification in order provide substantial input for the strain gauges used for force measurements.
-\subsubsection{Stewart Platform Simulation}
-Stewart Platform simulation was done on MatLab using the Inverse kinematic equations. Different servo angles for different platform movements can be obtained from the simulation. The angles for yaw, pitch and roll could be adjusted during simulations to predict the maximum allowable angle values. Value of displacement in the x-, y- and z-directions could also be adjusted enabling us to predict the maximum allowable displacement in the respective directions. A summary of these angles is given in table \ref{roll}.
-\begin{center}
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.75\linewidth]{Figures/Matlab}
-		\caption[Linear displacements]{Matlab simulation for x-y-z movements}
-	\end{figure}
-\end{center}
-\begin{center}
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.75\linewidth]{Figures/Matlab2}
-		\caption[Angular displacements]{Matlab simulation for yaw,pitch and roll movements}
-	\end{figure}
-\end{center}
-\begin{center}
-	\begin{table}[H]
-		\centering
-		\caption[Maximum Servo angles]{Maximum Servo angles for maximum yaw,pitch, roll angles and maximum x,y and z displacements}
-		\label{roll}
-		\centering
-		\begin{tabular}{|l|l|}
-			\hline
-			\textbf{Max. roll angle (deg)}   & \textbf{Max. servo angle}      \\
-			\hline
-			$|15|$                           & 24.34                          \\
-			\hline
-			\textbf{Max. yaw angle (deg)}    & \textbf{Max. servo angle(deg)} \\
-			\hline
-			$|15|$                           & 27.13                          \\
-			\hline
-			\textbf{Max. pitch angle (deg)}  & \textbf{Max. servo angle(deg)} \\
-			\hline
-			$|15|$                           & 25.79                          \\
-			\hline
-			\textbf{Max. x displacement(cm)} & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 71.58                          \\
-			\hline
-			\textbf{Max. y displacement}     & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 63.78                          \\
-			\hline
-			\textbf{Max. z displacement(cm)} & \textbf{Max. servo angle(deg)} \\
-			\hline
-			4                                & 29.03                          \\
-			\hline
-		\end{tabular}
-	\end{table}
-\end{center}
+These strains are small and undergo amplification in order provide substantial input for the strain gauges used for force measurements.
 
 \subsection{Human Machine Interface}
 The user interface of the platform was programmed using golang and this resulted in the view below with the use of sliders for platform positioning and buttons to set model orientations and start data collection.
@@ -136,21 +85,74 @@ The user interface of the platform was programmed using golang and this resulted
 	\end{figure}
 \end{center}
 
-This includes slider buttons to control platform position and orientation. It also includes buttons to allow for data capture  and platform control. The dashboard also has a live plot of incoming data to provide immediate user feedback.
-
-The transport via TCP to the microcontroller was also tested, it showed bidirectional streaming of data to and from the microcontroller making it suitable for communication.
-
-\subsection{PCB}
-The schematics from the electrical designs as seen in the appendix were routed to generate a PCB ready for manufacture. This is shown in the 3D render below:
+The top bar of the user interface includes slider buttons to control platform orientation and commands around recording data and calibration as shown in figure \ref{fig:hmi_top}.
 \begin{center}
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=0.7\linewidth]{Figures/pcb}
-		\caption[Printed Circuit Board view]{Printed Circuit Board view}
-		\label{fig:pcb3d}
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 195125.png}
+		\caption[HMI Top Bar]{HMI Top Bar}
+		\label{fig:hmi_top}
 	\end{figure}
 \end{center}
-The PCB is meant to be compact as shown in the figure \ref{fig:pcb3d}. It is also integrates most of the components to minimize use of wires to make connections.
+
+The menu bar also provides options to test the six degrees of freedom for the whole platform as shown in figure \ref{fig:hmi_menu}.
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics{Figures/Screenshot 2022-12-11 195108.png}
+		\caption[HMI menubar]{HMI menubar}
+		\label{fig:hmi_menu}
+	\end{figure}
+\end{center}
+A calibration window is also included that is used to set the calibration factor for measurements taken as shown in figure \ref{fig:hmi_calib}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 195034.png}
+		\caption[HMI calibration]{HMI calibration}
+		\label{fig:hmi_calib}
+	\end{figure}
+\end{center}
+The incoming sensor data was also displayed on the screen as shown in the following figures:
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 194656.png}
+		\caption[HMI Aerodynamic loads]{HMI Aerodynamic loads}
+	\end{figure}
+\end{center}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 194826.png}
+		\caption[HMI Air velocity]{HMI Air velocity}
+	\end{figure}
+\end{center}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 194952.png}
+		\caption[HMI IMU readings]{HMI IMU readings}
+	\end{figure}
+\end{center}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{Figures/Screenshot 2022-12-11 194931.png}
+		\caption[HMI Raw Strain]{HMI Raw Strain}
+	\end{figure}
+\end{center}
+\subsection{PCB}
+The schematics from the electrical designs as seen in the appendix were routed to generate a PCB ready for manufacture. The fabricated PCB is shown in figure \ref{fig:pcb_fab}
+\begin{center}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.7\linewidth]{Figures/pcb 1.JPG}
+		\caption[Printed Circuit Board view]{Printed Circuit Board}
+		\label{fig:pcb_fab}
+	\end{figure}
+\end{center}
+The PCB is compact as shown in the figure \ref{fig:pcb_fab}. It is also integrates most of the components to minimize use of wires to make connections.
 
 \subsection{Smoke Visualization}
 The smoke emitting device was 3D printed and assembled into the wind tunnel as shown in \ref{fig:smoke_res}.
