--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -23,14 +23,14 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 
 \subsection{Force Measurement by the Stewart Platform}
 Finite Element Analysis done on FEA environment in Autodesk inventor showed expected strain values on each
-Stewart platform leg as shown in figure \ref{strain}.
+Stewart platform leg as shown in figure \ref{strain1}.
 
 \begin{center}
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.6\linewidth]{Figures/Equivalent}
 		\caption[Equivalent strain]{Strain induced on each of the legs}
-		\label{strain}
+		\label{strain1}
 	\end{figure}
 \end{center}
 These strains are small and undergo amplification in order provide substantial input for the strain gauges used for force measurements.
