--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -62,14 +62,26 @@ The schematics from the electrical designs as seen in the appendix were routed t
 \end{center}
 The PCB is meant to be compact as shown in the figure \ref{fig:pcb3d}. It is also integrates most of the components to minimize use of wires to make connections.
 
-\subsection{Smoke Visualization}
-The smoke emitting device was 3D printed and assembled into the wind tunnel as shown in \ref{fig:smoke_res}.
-The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
-\begin{center}
-	\begin{figure}
-		\centering
-		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
-		\caption[Smoke Emitting Device]{Smoke Emitting Device}
-		\label{fig:smoke_res}
-	\end{figure}
-\end{center}
+\subsection{Smoke Rake}
+The smoke emitting device was 3D printed at iPIC and assembled and is shown in figure \ref{result}.
+\begin{figure}[H]%
+	\centering
+	\subfloat[\centering 3D CAD View]{{\includegraphics[width=3cm]{Figures/Rake CAD} }}%
+	\qquad
+	\subfloat[\centering Final Rake ]{{\includegraphics[width=3cm]{Figures/smoke emitter}}}
+	\caption[Smoke rake]{Final Smoke Rake}%
+	\label{result}%
+\end{figure}
+
+
+%into the wind tunnel as shown in \ref{fig:smoke_res}.
+%The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
+%\begin{center}
+%	\begin{figure}
+%		\centering
+%		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
+%		\caption[Smoke Emitting Device]{Smoke Emitting Device}
+%		\label{fig:smoke_res}
+%	\end{figure}
+%\end{center}
+%\subsection{}
