--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -21,6 +21,8 @@
 \usepackage[skip=0.333\baselineskip]{caption}
 \usepackage{longtable}
 \usepackage{pdflscape}
+\usepackage{subfig}
+\usepackage{psfrag}
 %\usepackage{mathtools}
 %\usepackage{unicode-math}
 %\setmathfont{XITS Math}
