--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -1,4 +1,3 @@
-
 \section{Results}
 \subsection{Six DOF Stewart Platform}
 As earlier mentioned, the Stewart platform has already been designed and fabricated and our part in this work was to do an evaluation of the same to verify its mechanical feasibility. As such, the various parts of the platform were obtained and assembled. For further analysis, a 3D model of the same platform was done using Autodesk Inventor.
@@ -114,26 +113,25 @@ The schematics from the electrical designs as seen in the appendix were routed t
 \end{center}
 The PCB is compact as shown in the figure \ref{fig:pcb_fab}. It is also integrates most of the components to minimize use of wires to make connections.
 
-\subsection{Smoke Rake}
-The smoke emitting device was 3D printed at iPIC and assembled and is shown in figure \ref{result}.
-\begin{figure}[H]%
+\subsection{Smoke Visualization}
+\subsubsection{Smoke Rake}
+The smoke rake was 3D printed at iPIC and assembled with its lid as shown.
+\begin{figure}[!htb]%
 	\centering
-	\subfloat[\centering 3D CAD View]{{\includegraphics[width=3cm]{Figures/Rake CAD} }}%
+	\subfloat[\centering Smoke Rake CAD]{{\includegraphics[width=3cm]{Figures/Rake CAD.JPG} }}%
 	\qquad
-	\subfloat[\centering Final Rake ]{{\includegraphics[width=3cm]{Figures/smoke emitter}}}
-	\caption[Smoke rake]{Final Smoke Rake}%
-	\label{result}%
+	\subfloat[\centering 3D Printed Rake]{{\includegraphics[width=3cm]{Figures/smoke emitter.jpg}}}
+	\caption[Final part]{Part cut using Wire EDM}%
+	\label{fig:result}%
 \end{figure}
 
-
-%into the wind tunnel as shown in \ref{fig:smoke_res}.
-%The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
-%\begin{center}
-%	\begin{figure}
-%		\centering
-%		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
-%		\caption[Smoke Emitting Device]{Smoke Emitting Device}
-%		\label{fig:smoke_res}
-%	\end{figure}
-%\end{center}
-%\subsection{}
+The smoke emitting device was 3D printed and assembled into the wind tunnel as shown in \ref{fig:smoke_res}.
+The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
+\begin{center}
+	\begin{figure}
+		\centering
+		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
+		\caption[Smoke Emitting Device]{Smoke Emitting Device}
+		\label{fig:smoke_res}
+	\end{figure}
+\end{center}
