Rake and pipe assembly

--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -121,17 +121,17 @@ The smoke rake was 3D printed at iPIC and assembled with its lid as shown.
 	\subfloat[\centering Smoke Rake CAD]{{\includegraphics[width=3cm]{Figures/Rake CAD.JPG} }}%
 	\qquad
 	\subfloat[\centering 3D Printed Rake]{{\includegraphics[width=3cm]{Figures/smoke emitter.jpg}}}
-	\caption[Final part]{Part cut using Wire EDM}%
+	\caption[3D Printed rake]{Smoke rake and lid assembled}%
 	\label{fig:result}%
 \end{figure}
-
-The smoke emitting device was 3D printed and assembled into the wind tunnel as shown in \ref{fig:smoke_res}.
-The device was able to create streamlines of smoke to improve visibility in the wind tunnel.
-\begin{center}
-	\begin{figure}
-		\centering
-		\includegraphics[width=0.5\linewidth]{Figures/Screenshot_20221211-185935.png}
-		\caption[Smoke Emitting Device]{Smoke Emitting Device}
-		\label{fig:smoke_res}
-	\end{figure}
-\end{center}
+\subsubsection{Smoke Rake and Pipe Assembly}
+The Smoke rake was assembled with a metal pipe for rigid support and also for smoke introduction into the
+smoke rake as shown.
+\begin{figure}[!htb]%
+	\centering
+	\subfloat[\centering CAD Assembly]{{\includegraphics[width=3cm]{Figures/CAD assembly.JPG} }}%
+	\qquad
+	\subfloat[\centering Final Part]{{\includegraphics[width=4.5cm]{Figures/final pipe.jpg}}}
+	\caption[Final rake and pipe]{Smoke rake and pipe assembly and setup in the wind tunnel}%
+	\label{fig:result}%
+\end{figure}
