--- a/Final Report/Files/Chapter5.tex
+++ b/Final Report/Files/Chapter5.tex
@@ -1,6 +1,6 @@
 \section{Conclusion}
-The current Stewart platform configuration was modified to allow for six degrees of freedom which included three translations and three rotations.
-The platform has a high quality index i.e. 0.86 and is therefore mechanically feasible. From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testing in wind tunnel experiments.
-The electronic circuit to obtain flow velocity measurements and load measurements was also designed. This also included the sensor selection and placement in the wind tunnel. 
-The Human machine interactive interface was also designed and programmed. The protocol for communication was also selected to allow data acquisition as well as sending instructions to the platform. 
-The final stages involve integration of all the modules to create working force balance and its control system.
+The current Stewart platform configuration was modified to allow for six degrees of freedom which includes three translations and three rotations.
+From Finite Element Analysis, the six legs of the Stewart platform experience significant strains which can be used to obtain force measurements during model testing in wind tunnel experiments.
+The electronic circuit to obtain flow velocity measurements and load measurements was also demonstrated. This also included the sensor selection and placement in the wind tunnel. 
+The Human machine interactive interface was also developed and tested. 
+The force balance was tested utilizing a real aerofoil model and the system was shown to be working as per specifications.
