--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -152,7 +152,7 @@ smoke rake as shown.
 	\qquad
 	\subfloat[\centering Final Part]{{\includegraphics[width=4.5cm]{Figures/final pipe.jpg}}}
 	\caption[Final rake and pipe]{Smoke rake and pipe assembly and setup in the wind tunnel}%
-	\label{fig:result}%
+	\label{fig:result1}%
 \end{figure}
 
 \subsection{Discussion}
