--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -49,3 +49,13 @@ The stewart platform force balance is meant to be able to measure 6 component ae
 \end{enumerate}
 
 \subsection{Justification}
+In a large percentage of cases, the measurement of forces and moments experienced by
+a model during wind tunnel testing is critical. To achieve this in a cost sustainable way
+while allowing the dynamic positioning of model for different test cases is important for
+development of aerodynamic bodies and parts. In many cases where both these goals are
+achieved, it results in expensive and hard to maintain devices or integrated wind tunnels.
+
+This high cost of wind tunnel force balances limits educational access to study areas around
+ the scientific study in aerodynamics for aeronautical and automotive applications. Lowering 
+the cost of force balances would increase access to studies in these fields and inspire
+ students to participate in STEM, especially in low-income areas/countries.
