--- a/Final Report/Files/Chapter2.tex
+++ b/Final Report/Files/Chapter2.tex
@@ -9,7 +9,7 @@ A wind tunnel is a large tube with air moving inside. This movement of air is us
 	\end{figure}
 \end{center}
 The first wind tunnel was built by Francis Wenham in 1871. However, it was the Wright Brothers who were the first to show the value of the wind tunnel in aerodynamic design with their 1902 wind tunnel. The Wright Brothers’ wind tunnel was largely made of wood, with a glass window on the top to look down through and see the force balance, from which the
-lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fueled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h)\cite{morris_force_2010}.
+lift and drag forces could be read. The wind tunnel was powered by a fan driven off a natural gas fuelled engine. Their tunnel was square of 16" by 16"(about 407mm by 407mm), and 6 foot long (about 1829mm), with a maximum test speed of 35 mph (about 56 km/h)\cite{morris_force_2010}.
 
 
 Later in the early 20th century in Europe, the main users of wind tunnels were Gustave Eiffel in France and Ludwig Prandtl in Germany. Prandtl built the first closed circuit wind tunnel in 1908. Closed circuit wind tunnels are characterized by the recirculation of the airflow with very minimal exchange with the exterior. Open circuit wind tunnels on the other hand, have an airflow that follows a straight path and flows to the contracted zone where the test section is located and then passes through a diffuser, a fan section and an exhaust.
@@ -19,7 +19,7 @@ By the 1940’s supersonic wind tunnels were in use. In 1972, a cryogenic wind t
 
 Today the largest wind tunnel in the world is the National Full-Scale Aerodynamics Complex at NASA's Ames Research Center, which has a test section of cross-section 80 ft by 100 ft (24 m x 31 m). The types of instruments in common use in wind tunnels include boundary layer rakes, tufts, pitot tubes, pressure sensitive paint, smoke, and static pressure taps \cite{morris_force_2010}.
 
-NASA uses wind tunnels to test scale models of aircraft and spacecraft. The wind tunnels help to test ideas of making airplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere.
+NASA uses wind tunnels to test scale models of aircraft and spacecraft. The wind tunnels help to test ideas of making aeroplanes better and safer. They are also used to help engineers in designing spacecraft that will work in other planets such as mars - the wind tunnel can be used to simulate objects in an atmosphere that's thinner than ours e.g. an atmosphere that's exactly like the Martian atmosphere.
 \begin{center}
 	%&\vspace*{-4.0cm}
 	\begin{figure}[H]
@@ -237,7 +237,7 @@ Table \ref{tablecom} shows a summary of advantages and disadvantages of external
 		Wire          & Relatively simple construction              & large tare drag               \\
 		              &                                             & Less Versatile and robust     \\
 		\hline
-		Platform      & Easy consruction and instrumentation        & Force and torques coupled     \\
+		Platform      & Easy construction and instrumentation        & Force and torques coupled     \\
 		              &                                             & Center alignment difficulties \\
 		\hline
 		Yoke          & Overcomes center alignment problems         & Structural deflections        \\
@@ -337,7 +337,7 @@ smoke machine, rather than using combustion of hydrocarbons as in the smoke wire
 
 \subsection{Previous Work}
 Force balance design for educational wind tunnels is an area of great interest. This is especially important
-for aerodynamics studies of airplane and airfoil models, as well as ground vehicles such as trucks
+for aerodynamics studies of aeroplanes and aerofoil models, as well as ground vehicles such as trucks
 and cars \cite{morris_force_2010}.
 
 Force balances can be used in conjunction with a linear actuator where the
@@ -395,7 +395,7 @@ Further developments were made two years later to this design which are enumerat
 \subsubsection{Stewart Platform at JKUAT}
 Six-DOF Stewart platforms have been designed and fabricated by students in the Mechatronic Engineering department as part of their final year projects. The Stewart platforms by the first two groups of students were for different applications and the one from FYP-17 was to be used as a force balance for Wind tunnel testing \cite{caleb}. Although the Stewart platform was built successfully, the group didn't achieve a force balance for the same.
 \subsection{Summary of Gaps}
-Whereas the Force balance by the Mechanical Engineering department in Bradley University is relatively simple to construct, it still poses a challenge in terms of cost. Cost can be minimized based on load cell and actuator selection but this does not guarantee that the level of accuracy will not be compromised. Also, only two or three force components can be obtained. The force balace setup doesn't allow dynamic positioning of models in the wind tunnel during testing.
+Whereas the Force balance by the Mechanical Engineering department in Bradley University is relatively simple to construct, it still poses a challenge in terms of cost. Cost can be minimized based on load cell and actuator selection but this does not guarantee that the level of accuracy will not be compromised. Also, only two or three force components can be obtained. The force balance setup doesn't allow dynamic positioning of models in the wind tunnel during testing.
 
 Institutions such as EASA have procured their force balances. The force balances guarantee high accuracy but this may not be a cost-effective solution.
 
@@ -406,5 +406,5 @@ A 6 DOF Stewart platform with force measurement for a low-speed wind tunnel has 
 	\item Development of a Human-Machine-Interface for Stewart platform control.
 	\item Data acquisition from sensors.
 	\item Implementation of servo circuit control.
-	\item Calibration of the measurement system to be in-line with NASA airfoils.
+	\item Calibration of the measurement system to be in-line with NASA aerofoils.
 \end{enumerate}
