--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -272,7 +272,7 @@ The smoke emitting holes are 6mm in diameter and the air inlet holes are 5mm in 
 
 \subsubsection*{Smoke Rake and Pipe Assembly}
 A metal pipe is used to provide rigid support to the smoke rake in the wind tunnel as well as placing it at the center
-(vertically). A pipe of length 40mm and diameter 3/4"(19.05mm) is used. The pipe surface is roughed using a harcksaw in
+(vertically). A pipe of length 40mm and diameter 3/4"(19.05mm) is used. The pipe surface is roughed using a hacksaw in
 order to minimize any turbulence in the flow since it will be placed in the intake section. A plate of 10mm by 10mm by 1.5mm
 and two plumbing nuts are required to mount the pipe in the intake section. The smoke rake and pipe design is shown
 in figure \ref{pipe and rake}
@@ -396,7 +396,7 @@ Three pitot probes are to be used in the wind tunnel i.e. in the test section, i
 	\begin{figure}[H]
 		\centering
 		\includegraphics{Figures/wt and pitot.JPG}
-		\caption[Pitot setpu]{Pitot setup in the intake and diffuser}
+		\caption[Pitot setup]{Pitot setup in the intake and diffuser}
 		\label{pitot loc}
 	\end{figure}
 \end{center}
