--- a/Final Report/Files/Chapter2.tex
+++ b/Final Report/Files/Chapter2.tex
@@ -260,7 +260,7 @@ The overall cost of coming up with this force balance is given as 1000 dollars w
 %\end{figure}
 %\end{center}
 \subsubsection{East Africa School of Aviation (EASA)}
-The EASA Aerodynamics lab has a subsonic wind tunnel 300mm (AF1300) and a flight demonstration wind tunnel(AF41) supplied by TECQUIPMENT. The Subsonic wind tunnel is equipped with a three-component force balance, smoke generator, multi-tube manometer and a range of aerofoil drag, boundary layer low and high wing models. The Flight demonstration wind tunnel has a data acquisition module for classroom demonstrations and investigations into the behavior of fixed-wing aircraft and wing-performance during take-off, flight and landing \cite{TEC}.
+The EASA Aerodynamics lab has a subsonic wind tunnel 300mm (AF1300) and a flight demonstration wind tunnel(AF41) supplied by TECQUIPMENT. The Subsonic wind tunnel is equipped with a three-component force balance, smoke generator, multi-tube manometer and a range of aerofoil drag, boundary layer low and high wing models. The Flight demonstration wind tunnel has a data acquisition module for classroom demonstrations and investigations into the behaviour of fixed-wing aircraft and wing-performance during take-off, flight and landing \cite{TEC}.
 
 \subsubsection{Tecnico Lisboa}
 In 2018, Joao Fernandes of Tecnico Lisboa developed a force balance system to
