--- a/Final Report/Main_file.tex
+++ b/Final Report/Main_file.tex
@@ -135,7 +135,7 @@
     \large{\textbf{Technologist}}\\
     \large{Mr. J Mbugua
     }\\
-    %Submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
+    %Submitted in partial fulfilment of the requirements for the degree of Bachelor of Science in Mechatronic Engineering in Jomo Kenyatta University of Agriculture and Technology, 2022.
     %     \large{\textbf{Supervisors}}\\
     %    \large{Dr.-Ing.~Jackson G. Njiri}\\
     %    \large{Prof. George N. Nyakoe}\\
