--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -21,7 +21,7 @@ The assembled Stewart platform is as shown in figure \ref{fig}. Figure \ref{fig1
 \end{center}
 
 \subsection{Strut}
-Computational Fluid Dynamics was done for various values of air spaid and the following drag forces were
+Computational Fluid Dynamics was done for various values of air speed and the following drag forces were
 determined from the simulations.
 \begin{table}[H]
 	\caption{CFD Results}
@@ -43,7 +43,7 @@ determined from the simulations.
 	\hline
 	\end{tabular}
 \end{center}
-Figure \ref{cfd} shows the effect of the strut to air flow as well as the amount of drag force expereienced.
+Figure \ref{cfd} shows the effect of the strut to air flow as well as the amount of drag force experienced.
 \begin{center}
 	\begin{figure}[H]
 		\centering
