--- a/Final Report/Files/Chapter2.tex
+++ b/Final Report/Files/Chapter2.tex
@@ -121,7 +121,7 @@ Table \ref{tablecom} shows a summary of advantages and disadvantages of external
 		Wire          & Relatively simple construction              & large tare drag               \\
 		              &                                             & Less Versatile and robust     \\
 		\hline
-		Platform      & Easy consruction and instrumentation        & Force and torques coupled     \\
+		Platform      & Easy construction and instrumentation        & Force and torques coupled     \\
 		              &                                             & Center alignment difficulties \\
 		\hline
 		Yoke          & Overcomes center alignment problems         & Structural deflections        \\
@@ -179,7 +179,7 @@ Angle of attack (\textalpha)is the angle measured between the longitudinal axis 
 \end{center}
 
 \subsection{Smoke visualization System for Wind Tunnel}
-The ability to visualise the airflow over solid objects in a wind tunnel crucial in understanding the fundamental principles of both fluid dynamics and aerodynamics. To achieve this a uniform row of smoke lines are required. These smoke lines should be sufficiently long to maintain their integrity throughout
+The ability to visualize the airflow over solid objects in a wind tunnel crucial in understanding the fundamental principles of both fluid dynamics and aerodynamics. To achieve this a uniform row of smoke lines are required. These smoke lines should be sufficiently long to maintain their integrity throughout
 the test section \cite{trinder2013development}.
 
 Smoke visualization methods including smoke-generating materials and techniques for generating smoke lines have been summarized in the tables below.
@@ -191,7 +191,7 @@ Smoke visualization methods including smoke-generating materials and techniques 
 		\hline
 		\textbf{Material}                            & \textbf{Advantages}                 & \textbf{Disadvantages}                                      \\
 		\hline
-		Tobacco, kerosene and titanium-tetrachloride & Produces high quality smoke         & Hazardous/toxic; tobbacco is difficult to control           \\
+		Tobacco, kerosene and titanium-tetrachloride & Produces high quality smoke         & Hazardous/toxic; tobacco is difficult to control           \\
 		\hline
 		Carbon dioxide                               & Produces dense smoke                & Potentially harmful in large volumes; needs to be exhausted \\
 		\hline
@@ -210,7 +210,7 @@ Smoke visualization methods including smoke-generating materials and techniques 
 		\hline
 		Smoke wire         & Produces the most effective smoke lines            & Complex set-up to achieve resistive heating \\
 		\hline
-		Smoke rake         & Can be utilised with non-hazardous smoke materials & Prone to wind tunnel blockage effects       \\
+		Smoke rake         & Can be utilized with non-hazardous smoke materials & Prone to wind tunnel blockage effects       \\
 		\hline
 	\end{tabular}
 \end{center}
@@ -279,7 +279,7 @@ Further developments were made two years later to this design which are enumerat
 \subsubsection{Stewart Platform at JKUAT}
 Six-DOF Stewart platforms have been designed and fabricated by students in the Mechatronic Engineering department as part of their final year projects. The Stewart platforms by the first two groups of students were for different applications and the one from FYP-17 was to be used as a force balance for Wind tunnel testing \cite{caleb}. Although the Stewart platform was built successfully, the group didn't achieve a force balance for the same.
 \subsection{Summary of Gaps}
-Whereas the Force balance by the Mechanical Engineering department in Bradley University is relatively simple to construct, it still poses a challenge in terms of cost. Cost can be minimized based on load cell and actuator selection but this does not guarantee that the level of accuracy will not be compromised. Also, only two or three force components can be obtained. The force balace setup doesn't allow dynamic positioning of models in the wind tunnel during testing.
+Whereas the Force balance by the Mechanical Engineering department in Bradley University is relatively simple to construct, it still poses a challenge in terms of cost. Cost can be minimized based on load cell and actuator selection but this does not guarantee that the level of accuracy will not be compromised. Also, only two or three force components can be obtained. The force balance setup doesn't allow dynamic positioning of models in the wind tunnel during testing.
 
 Institutions such as EASA have procured their force balances. The force balances guarantee high accuracy but this may not be a cost-effective solution.
 
