--- a/Final Report/Files/Chapter4.tex
+++ b/Final Report/Files/Chapter4.tex
@@ -1,4 +1,4 @@
-\section{Results}
+\section{Results and Discussion}
 \subsection{Six DOF Stewart Platform}
 As earlier mentioned, the Stewart platform has already been designed and fabricated and our part in this work was to do an evaluation of the same to verify its mechanical feasibility. As such, the various parts of the platform were obtained and assembled. For further analysis, a 3D model of the same platform was done using Autodesk Inventor.
 
@@ -191,8 +191,9 @@ smoke rake as shown.
 \subsection{Discussion}
 The Stewart platform is able to position models in various dynamic positions depending on the angle values
 of yaw, roll and pitch as well as the amount of displacements in the x-, y- and z-directions input via the HMI.
-The home position of the Stewart platform is when all servos are at 90 degree. Application of load on the platform
+ Application of load on the platform
 subjects each of the legs to axial forces which causes strain. This strain can be used to determine aerodynamic forces
 on models during wind tunnel testing. However, aerodynamic forces due to the strut must be put to account because from
 simulations, drag forces are developed by the strut when there is airflow. Smoke introduced into the wind tunnel allows
-visualization of airflow around a model.
+visualization of airflow around a model. Pitot tube probes used and their transducers provide valuable information used 
+in post analysis to determine the aerodynamic coefficients (drag, lift).
