--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -469,7 +469,7 @@ In this configuration the when the chip select pin of an amplifier is set to low
 The HX711 however allows for the I2C like communication via two wires (serial clock (SCL) and Serial Data (SDA)). They however do not have hardware addresses thus many pins are required for the interface, This can however be remedied by the use of a shared SCL between each of the amplifier modules reducing the overall number of pins required to interface.
 
 \subsection{Software and Control}
-This section deals with the control of the stewart platform. It involves allowing input and obtaining output form the platform force balance.
+This section deals with the control of the Stewart platform. It involves allowing input and obtaining output form the platform force balance.
 \subsubsection{Human Machine Interface}
 The purpose of the interface is to enable control of the platform position as well as to obtain measured data from the strain gauges and pitot tubes.
 The general layout is as shown in the figure \ref{fig:hmi}:
