--- a/Final Report/Files/Nomenclature.tex
+++ b/Final Report/Files/Nomenclature.tex
@@ -42,5 +42,5 @@
 %\item $\beta$ - Side slip angle
 %\item $|J|$ - determinant of Jacobian matrix
 %\item $|J|_{m}$ - determinant of Jacobian matrix of optimal Stewart PLatform configuration
-%\item $\lambda$ - Quaity index
+%\item $\lambda$ - Quality index
 %\end{itemize}}
