f(report) intro and presection fixes

--- a/Final Report/Files/Symbols.tex
+++ b/Final Report/Files/Symbols.tex
@@ -1,32 +1,30 @@
-\paragraph{List of Symbols}
-\begin{itemize}
-    \item $B_{k}$ - leg attachment on base
-    \item $H_{k}$ - Servo horn anchor
-    \item $\vec{b}_i$ - position of ith connection point at base with respect to B
-    \item $\vec{F}_e$ - external force applied to platform
-    \item $f_i$ - force exerted on ith leg due $F_e, M_e$
-    \item $F$ - vector of leg forces
-    \item $\hat{I}_i$ - Unit vector along the ith leg
-    \item $\vec{M}_e$ - external moment applied to platform
-    \item $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates
-    \item $\alpha$ - Angle of attack
-    \item $\alpha_{k}$ - Servo angle
-    \item $\beta$ - Side slip angle
-    \item $\beta_{k}$ - servo rotation angle form plan view
-    \item $\epsilon$ - Strain
-    \item $|h|$ - distance between original base anchor and platform anchor
-    \item $|J|$ - determinant of Jacobian matrix
-    \item $|J|_{m}$ - determinant of Jacobian matrix of optimal Stewart Platform configuration
-    \item $\lambda$ - Quality index
-    \item $l_{k}$ - leg length
-    \item $P_{k}$ - leg attachment on platform
-    \item $^{p}R_{b}$ - Rotation of the platform
-    \item $R_{y}$ - rotation about y-axis
-    \item $R_{z}$ - rotation about z-axis
-    \item $\sigma$ - Stress
-    \item $^{p}T_{b}$ - translation from the base origin to the platform origin
-    \item $t_{x}$ -  translation in the x direction
-    \item $t_{y}$ -  translation in the y direction
-    \item $t_{z} $ -  translations in the z direction
-\end{itemize}
+\section*{List of Symbols}
+    $B_{k}$ - leg attachment on base\\
+    $H_{k}$ - Servo horn anchor\\
+    $\vec{b}_i$ - position of ith connection point at base with respect to B\\
+    $\vec{F}_e$ - external force applied to platform\\
+    $f_i$ - force exerted on ith leg due $F_e, M_e$\\
+    $F$ - vector of leg forces\\
+    $\hat{I}_i$ - Unit vector along the ith leg\\
+    $\vec{M}_e$ - external moment applied to platform\\
+    $\hat{{S_{i}}}$ - unit vector of the Plucker coordinates\\
+    $\alpha$ - Angle of attack\\
+    $\alpha_{k}$ - Servo angle\\
+    $\beta$ - Side slip angle\\
+    $\beta_{k}$ - servo rotation angle form plan view\\
+    $\epsilon$ - Strain\\
+    $|h|$ - distance between original base anchor and platform anchor\\
+    $|J|$ - determinant of Jacobian matrix\\
+    $|J|_{m}$ - determinant of Jacobian matrix of optimal Stewart Platform configuration\\
+    $\lambda$ - Quality index\\
+    $l_{k}$ - leg length\\
+    $P_{k}$ - leg attachment on platform\\
+    $^{p}R_{b}$ - Rotation of the platform\\
+    $R_{y}$ - rotation about y-axis\\
+    $R_{z}$ - rotation about z-axis\\
+    $\sigma$ - Stress\\
+    $^{p}T_{b}$ - translation from the base origin to the platform origin\\
+    $t_{x}$ -  translation in the x direction\\
+    $t_{y}$ -  translation in the y direction\\
+    $t_{z} $ -  translations in the z direction\\
 \pagebreak
