--- a/Final Report/Files/Introduction.tex
+++ b/Final Report/Files/Introduction.tex
@@ -16,7 +16,7 @@ The Stewart platform can be used in conjunction with wind tunnels for wind tunne
 The Stewart platform can provide various dynamic positions to simulate complex vehicle manoeuvres. Incorporating a force balance with the Stewart platform will allow direct measurement of forces and torques acting on the model that is being tested in the wind tunnel.
 
 For this project, the force balance is intended to be built as simple and accessible as possible. Thus, the use of a six DOF Stewart Platform as a force balance.
-A Stewart Platform has already been designed and fabricated by a previous group but is not integrated with a force balance.
+A Stewart Platform was fabricated in a previous final year project. However, a force balance was not integrated into it.
 Electrical load measurement devices have to be connected to the legs of the Stewart platform in order to measure and obtain the results thus making it fully operational \cite{caleb}.
 
 \subsection{Problem Environment}
@@ -26,8 +26,7 @@ orientation of vehicles and aircraft in the actual environment.
 Whereas the force balances give very accurate results, some are expensive to build and use. Also, some objects require complex manoeuvre simulations to imitate the actual movements in air. There is therefore the need for dynamic positioning of objects in the wind tunnel.
 \subsection{Problem Statement}
 Measured parameters obtained in aerodynamic testing are critical in the development of parts. Current commercial force balances provide means to position models and obtained forces and moments during testing.
-However, these force balances are quite expensive and some do not provide an integrated solution. This project goes trough the development of a Stewart platform force balance which aims to provide a cost effective solution for the low speed wind tunnel available at the Engineering fluids lab at JKUAT.
-The Stewart platform force balance is meant to be able to measure 6 component aerodynamic loads as well as position the model within the wind tunnel with six degrees of freedom.
+However, these force balances are quite expensive and some do not provide an integrated solution. There is therefore a need to develop a cost effective yet accurate force balance that can be used to for measurements at the Fluids lab in JKUAT. The platform should be able to measure 6 components of aerodynamic loading, as well as position the model within the wind tunnel with 6 degrees of freedom.
 \subsection{Objectives}
 \subsubsection{Main Objective}
 \paragraph{} To develop a force balance and a control system for the Stewart platform.
