--- a/Final Report/Files/Nomenclature.tex
+++ b/Final Report/Files/Nomenclature.tex
@@ -1,34 +1,32 @@
-\paragraph{Nomenclature}
-\begin{itemize}
-    \item A - Cross-section area
-    \item a - Diameter of moving
-    \item b - Diameter of base
-    \item B - coordinate system defined at centre of base plate
-    \item COG - Center of Gravity
-    \item d - length of rod
-    \item DAQ/DAQA - Data Acquisition System
-    \item DOF - Degrees of Freedom
-    \item E - Young's Modulus
-    \item EASA - East Africa School of Aviation
-    \item ELB - Engineering Laboratory Building
-    \item F - Axial Force
-    \item FEA - Finite Element Analysis
-    \item G - Modulus of rigidity
-    \item $H$ - transformation matrix which related measured forces and applied forces
-    \item h - height between base plate and moving platform
-    \item HMI - Human Machine Interface
-    \item I2C - Inter-Integrated Circuit
-    \item J - Jacobian Matrix
-    \item JKUAT - Jomo Kenyatta University of Agriculture and Technology
-    \item NASA - National Space Agency
-    \item RS - Recommended Standard
-    \item SCL - Serial Clock
-    \item SDA - Serial Data
-    \item SPI - Serial Peripheral Interface
-    \item TTL - Transistor-Transistor Logic
-    \item UDP - User Datagram Protocol
-\end{itemize}
-\pagebreak
+\section*{Nomenclature}
+    A - Cross-section area\\
+    a - Diameter of moving\\
+    b - Diameter of base\\
+    B - coordinate system defined at centre of base plate\\
+    COG - Center of Gravity\\
+    d - length of rod\\
+    DAQ/DAQA - Data Acquisition System\\
+    DOF - Degrees of Freedom\\
+    E - Young's Modulus\\
+    EASA - East Africa School of Aviation\\
+    ELB - Engineering Laboratory Building\\
+    F - Axial Force\\
+    FEA - Finite Element Analysis\\
+    G - Modulus of rigidity\\
+    $H$ - transformation matrix which related measured forces and applied forces\\
+    h - height between base plate and moving platform\\
+    HMI - Human Machine Interface\\
+    I2C - Inter-Integrated Circuit\\
+    J - Jacobian Matrix\\
+    JKUAT - Jomo Kenyatta University of Agriculture and Technology\\
+    NASA - National Space Agency\\
+    RS - Recommended Standard\\
+    SCL - Serial Clock\\
+    SDA - Serial Data\\
+    SPI - Serial Peripheral Interface\\
+    TTL - Transistor-Transistor Logic\\
+    UDP - User Datagram Protocol
+%\pagebreak
 %\paragraph{List of Symbols
 %\begin{itemize}
 %\item $\vec{b}_i$ - position of ith connection point at base with respect to B
