f(report) fixes chapter 2

--- a/Final Report/Files/Chapter2.tex
+++ b/Final Report/Files/Chapter2.tex
@@ -24,7 +24,7 @@ NASA uses wind tunnels to test scale models of aircraft and spacecraft. The wind
 	%&\vspace*{-4.0cm}
 	\begin{figure}[H]
 		\centering
-		\includegraphics{Figures/Fig4}
+		\includegraphics[width=0.25\linewidth]{Figures/Fig4.JPG}
 		\caption[NASA Wind tunnel - space application]{NASA wind tunnels used to test the design of heavy-lift rocket \cite{NASA}}
 	\end{figure}
 \end{center}
@@ -113,7 +113,7 @@ Table \ref{tablecom} shows a summary of advantages and disadvantages of external
 	\begin{table}[H]
 		\caption[Comparison of Force Balances]{A Table of Comparison and Contrast of External Force Balances}
 		\label{tablecom}
-	\end{table}
+	
 	\begin{tabular}{|l|l|l|}
 		\hline
 		\textbf{Type} & \textbf{Advantages}                         & \textbf{Disadvantages}        \\
@@ -130,6 +130,7 @@ Table \ref{tablecom} shows a summary of advantages and disadvantages of external
 		              & Measures 6 components of forces and torques &                               \\
 		\hline
 	\end{tabular}
+\end{table}
 \end{center}
 \subsubsection{Internal Force Balances}
 The different kinds of internal balances can be made based on \cite{ferreira2015design}:
@@ -186,7 +187,7 @@ Smoke visualization methods including smoke-generating materials and techniques 
 \begin{center}
 	\begin{table}[H]
 		\caption[Smoke Generating Materials]{Comparison of Smoke Generating Materials}
-	\end{table}
+	
 	\begin{tabular}{|p{5cm}|p{5cm}|p{5cm}|}
 		\hline
 		\textbf{Material}                            & \textbf{Advantages}                 & \textbf{Disadvantages}                                      \\
@@ -198,12 +199,13 @@ Smoke visualization methods including smoke-generating materials and techniques 
 		Water-based liquids                          & Non-hazardous; produce dense vapour & Vapour can condense back to liquid                          \\
 		\hline
 	\end{tabular}
+\end{table}
 \end{center}
 
 \begin{center}
 	\begin{table}[H]
 		\caption[Smoke Generating Techniques]{Comparison of Smoke Generating Techniques}
-	\end{table}
+	
 	\begin{tabular}{|p{5cm}|p{5cm}|p{5cm}|}
 		\hline
 		\textbf{Technique} & \textbf{Advantages}                                & \textbf{Disadvantages}                      \\
@@ -213,6 +215,7 @@ Smoke visualization methods including smoke-generating materials and techniques 
 		Smoke rake         & Can be utilized with non-hazardous smoke materials & Prone to wind tunnel blockage effects       \\
 		\hline
 	\end{tabular}
+\end{table}
 \end{center}
 For smoke rake, an aerodynamically shaped
 body (typically elliptical) featuring a row of tubes through which the smoke exits is used. Smoke to the rake can be introduced from a non-hazardous source,
